<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Copyright 2013 acbelter
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~     http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
-->

<resources>
    <string name="app_name">HHTestProject</string>
    <string name="cv_label">Resume</string>
    <string name="hint_name">Enter your name</string>
    <string name="initials">Name</string>
    <string name="birth_date">Date of birth</string>
    <string name="date_mask">--.--.----</string>
    <string name="sex">Sex</string>
    <string name="office">Office</string>
    <string name="hint_office">Office</string>
    <string name="salary">Salary</string>
    <string name="hint_salary">Salary in RUB</string>
    <string name="phone">Phone</string>
    <string name="hint_phone">Ph.: +71234567890</string>
    <string name="email">E-mail</string>
    <string name="hint_email">E-mail: mail@example.com</string>
    <string name="send_cv_label">Send resume</string>
    <string name="send_reply_label">Send reply</string>
    <string name="reply_label">Reply to the applicant</string>
    <string name="no_data">No data</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="employer_reply">Reply of employer</string>
    <string name="hint_reply">E-mail text</string>
    <string name="toast_name">Name must be filled in.</string>
    <string name="toast_birth_date">Incorrect date of birth.</string>
    <string name="toast_salary">Incorrect value of salary.</string>
    <string name="toast_phone">Incorrect phone.</string>
    <string name="toast_email">Incorrect E-mail.</string>
    <string name="set">Set</string>

    <string-array name="sex_array">
        <item>Not selected</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
